# colibri

./: README  bootstrap  configure.ac  index.html  objects.inv  pycolibri_classes.pxd  pycolibri_wrapper.pyx  searchindex.js  setup.py
_sources/: index.txt
doc/: genindex.html  index.html  search.html  searchindex.js
doc/sources/: index.txt
docs/: Makefile
docs/source/: conf.py  index.rst  patternfinder.rst
experiments/: log
include/: Makefile.am  algorithms.h  alignmodel.h  classdecoder.h  classencoder.h  classifiers.h  common.h  decoder.h  gizamodel.h  lm.h  ngram.h  ngram.h.gch  patternmodel.h
scripts/: comparephrasetable.py  comparephrasetables.py  comparephrasetablewithpatternmodel.py  flattenphrasetablescores.py  intersectphrasetables.py  makecontextmosesini.py  moses-lexicaltranslationtable.py  mtwrapper.py  mtwrapper2.py  prunephrasetable.py  simplifyphrasetable.py
src/: Makefile  Makefile.am  algorithms.cpp  aligner.cpp  alignmodel.cpp  classdecode.cpp  classdecoder.cpp  classencode.cpp  classencoder.cpp  classifiers.cpp  common.cpp  contextmoses.cpp  decoder.cpp  giza2html.cpp  gizamodel.cpp  grapher.cpp  graphmodel.cpp  lm.cpp  modeldecode.cpp  ngram.cpp  patternfinder.cpp  patternmodel.cpp  querier.cpp  test.cpp  testskipgrams.cpp  trainclassifiers.cpp
